--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="container">
           <ul class="lorem">
             <li>
+              <div class="lorem__icons-wrapper">
               <svg
                 class="lorem__icons lorem__icons--backgroud"
                 width="70px"
@@ -84,6 +85,7 @@
               >
                 <use href="./images/icons.svg#icon-antenna-1"></use>
               </svg>
+            </div>
               <h4 class="advantages">LOREM IPSUM</h4>
               <p class="advantages__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -91,6 +93,7 @@
               </p>
             </li>
             <li>
+              <div class="lorem__icons-wrapper">
               <svg
                 class="lorem__icons lorem__icons--backgroud"
                 width="70px"
@@ -98,6 +101,7 @@
               >
                 <use href="./images/icons.svg#icon-clock-1"></use>
               </svg>
+            </div>
               <h4 class="advantages">LOREM IPSUM</h4>
               <p class="advantages__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -105,6 +109,7 @@
               </p>
             </li>
             <li>
+              <div class="lorem__icons-wrapper">
               <svg
                 class="lorem__icons lorem__icons--backgroud"
                 width="70px"
@@ -112,6 +117,7 @@
               >
                 <use href="./images/icons.svg#icon-diagram-1"></use>
               </svg>
+            </div>
               <h4 class="advantages">LOREM IPSUM</h4>
               <p class="advantages__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -119,6 +125,7 @@
               </p>
             </li>
             <li>
+              <div class="lorem__icons-wrapper">
               <svg
                 class="lorem__icons lorem__icons--backgroud"
                 width="70px"
@@ -126,6 +133,7 @@
               >
                 <use href="./images/icons.svg#icon-astronaut-1"></use>
               </svg>
+            </div>
               <h4 class="advantages">LOREM IPSUM</h4>
               <p class="advantages__text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -356,8 +364,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -369,8 +377,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -382,8 +390,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -395,8 +403,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -408,8 +416,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -421,8 +429,8 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="106px"
-                height="60.04px"
+                width="170px"
+                height="92px"
                 viewBox="0
                 0
                 100
@@ -494,9 +502,10 @@
             </ul>
           </div>
           <form class="footer-newsletter">
+            <h5 class="footer-header">ZAPISZ SIĘ DO NEWSLETTERA</h5>
             <div>
               <label for="newsletter">
-                <h5 class="footer-header">ZAPISZ SIĘ DO NEWSLETTERA</h5>
+                
                 <input
                   class="footer-newsletter__label"
                   id="newsletter"
