--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
               </p>
             </li>
            </ul>
-          
-          <h2 class="occupation__heading">Czym się zajmujemy</h2>
+          <div>
+          <h2 class="occupation-header">Czym się zajmujemy</h2>
           <ul class="occupation">
             <li class="occupation__label">
               <div class="occupation__label--background">
@@ -151,7 +151,7 @@
               </div>
               <img
                 class="occupation__img"
-                src="./images/img1.jpg"
+                src="./images/img1_x1_desktop.jpg"
                 alt="workplace with computers"
                 width="370"
                 height="294"
@@ -163,7 +163,7 @@
               </div>
               <img
                 class="occupation__img"
-                src="./images/img2.jpg"
+                src="./images/img2_x1_desktop.jpg"
                 alt="workplace with laptop and smartphone"
                 width="370"
                 height="294"
@@ -175,7 +175,7 @@
               </div>
               <img
                 class="occupation__img"
-                src="./images/img3.jpg"
+                src="./images/img3_x1_desktop.jpg"
                 alt="worplace with tablet"
                 width="370"
                 height="294"
@@ -189,12 +189,16 @@
         <div class="container">
           <h2 class="heading-team-title">Nasz zespół</h2>
           <ul class="team">
-            <li>
+            <li class="team__columns">
               <figure class="image-backgroud">
+                <picture>
+                <source media="(max-width: 600px)" srcset="./images/img4_x1_mobile.jpg, ./images/img4_x2_mobile.jpg">
+                <source media="(min-width: 601px)" srcset="./images/img4_x1_tablet.jpg, ./images/img4_x2_tablet.jpg">
+                <source media="(min-width: 900px)" srcset="./images/img4_x1_desktop.jpg, ./images/img4_x2_desktop.jpg">
                 <img
-                  src="./images/img4_x1_mobile.jpg"
+                  src="./images/img4.jpg"
                   alt="team member1"
-                />
+                /></picture>
                 <figcaption class="image-backgroud__card">
                   John Doe<br /><span class="image-backgroud__position"
                     >Product Designer</span
@@ -232,12 +236,17 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team__columns">
               <figure class="image-backgroud">
+                <picture>
+                <source media="(max-width: 600px)" srcset="./images/img5_x1_mobile.jpg, ./images/img5_x2_mobile.jpg">
+                <source media="(min-width: 601px)" srcset="./images/img5_x1_tablet.jpg, ./images/img5_x2_tablet.jpg">
+                <source media="(min-width: 900px)" srcset="./images/img5_x1_desktop.jpg, ./images/img5_x2_desktop.jpg">
                 <img
-                  src="./images/img5_x1_mobile.jpg"
+                  src="./images/img5.jpg"
                   alt="team member2"
                 />
+              </picture>
                 <figcaption class="image-backgroud__card">
                   John Doe<br /><span class="image-backgroud__position">
                     Frontend Developer</span
@@ -275,12 +284,18 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team__columns">
               <figure class="image-backgroud">
-                <img
-                  src="./images/img6_x1_mobile.jpg"
-                  alt="team member3"
-                />
+                <figure class="image-backgroud">
+                  <picture>
+                  <source media="(max-width: 600px)" srcset="./images/img6_x1_mobile.jpg, ./images/img6_x2_mobile.jpg">
+                  <source media="(min-width: 601px)" srcset="./images/img6_x1_tablet.jpg, ./images/img6_x2_tablet.jpg">
+                  <source media="(min-width: 900px)" srcset="./images/img6_x1_desktop.jpg, ./images/img6_x2_desktop.jpg">
+                  <img
+                    src="./images/img6.jpg"
+                    alt="team member3"
+                  />
+                </picture>
                 <figcaption class="image-backgroud__card">
                   John Doe<br /><span class="image-backgroud__position"> Marketing</span>
                   <ul class="social-icons">
@@ -316,12 +331,18 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team__columns">
               <figure class="image-backgroud">
-                <img
-                  src="./images/img7_x1_mobile.jpg"
-                  alt="team member4"
-                />
+                <figure class="image-backgroud">
+                  <picture>
+                  <source media="(max-width: 600px)" srcset="./images/img7_x1_mobile.jpg, ./images/img7_x2_mobile.jpg">
+                  <source media="(min-width: 601px)" srcset="./images/img7_x1_tablet.jpg, ./images/img7_x2_tablet.jpg">
+                  <source media="(min-width: 900px)" srcset="./images/img7_x1_desktop.jpg, ./images/img7_x2_desktop.jpg">
+                  <img
+                    src="./images/img7.jpg"
+                    alt="team member4"
+                  />
+                </picture>
                 <figcaption class="image-backgroud__card">
                   John Doe<br /><span class="image-backgroud__position">UI Designer</span>
                   <ul class="social-icons">
@@ -367,7 +388,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -380,7 +401,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -393,7 +414,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -406,7 +427,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -419,7 +440,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -432,7 +453,7 @@
             <li>
               <svg
                 class="clients__icons clients__background"
-                width="170px"
+                width="210px"
                 height="92px"
                 viewBox="0
                 0
@@ -565,7 +586,7 @@
         <li><a class="container-socials__link" href="">LinkedIn</a></li>
       </ul>
     </div>
-    
+</div>
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
