--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <source media="(min-width: 601px)" srcset="./images/img4_x1_tablet.jpg, ./images/img4_x2_tablet.jpg">
                 <source media="(min-width: 900px)" srcset="./images/img4_x1_desktop.jpg, ./images/img4_x2_desktop.jpg">
                 <img
-                  src="./images/img4.jpg"
+                  src="./images/img4_x1_mobile.jpg"
                   alt="team member1"
                 /></picture>
                 <figcaption class="image-backgroud__card">
@@ -243,7 +243,7 @@
                 <source media="(min-width: 601px)" srcset="./images/img5_x1_tablet.jpg, ./images/img5_x2_tablet.jpg">
                 <source media="(min-width: 900px)" srcset="./images/img5_x1_desktop.jpg, ./images/img5_x2_desktop.jpg">
                 <img
-                  src="./images/img5.jpg"
+                  src="./images/img5_x1_mobile.jpg"
                   alt="team member2"
                 />
               </picture>
@@ -292,7 +292,7 @@
                   <source media="(min-width: 601px)" srcset="./images/img6_x1_tablet.jpg, ./images/img6_x2_tablet.jpg">
                   <source media="(min-width: 900px)" srcset="./images/img6_x1_desktop.jpg, ./images/img6_x2_desktop.jpg">
                   <img
-                    src="./images/img6.jpg"
+                    src="./images/img6_x1_mobile.jpg"
                     alt="team member3"
                   />
                 </picture>
@@ -339,7 +339,7 @@
                   <source media="(min-width: 601px)" srcset="./images/img7_x1_tablet.jpg, ./images/img7_x2_tablet.jpg">
                   <source media="(min-width: 900px)" srcset="./images/img7_x1_desktop.jpg, ./images/img7_x2_desktop.jpg">
                   <img
-                    src="./images/img7.jpg"
+                    src="./images/img7_x1_mobile.jpg"
                     alt="team member4"
                   />
                 </picture>
